--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -9,8 +9,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;500;700;800&family=Oswald:wght@300;400;700&display=swap"
         rel="stylesheet">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollToPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollToPlugin.min.js"></script>
 </head>
 
 <body class="contact-page">
@@ -20,7 +20,7 @@
         <nav>
             <div class="nav-container">
                 <a href="index.html" class="logo">
-                    <img src="../img/logo1.png" alt="Maki Peru" />
+                    <img src="../img/logo1.png" />
                 </a>
 
                 <div class="hamburger" id="hamburger">
@@ -31,16 +31,16 @@
 
                 <div class="nav-right" id="nav-right">
                     <ul class="nav-links">
-                        <li><a href="../../index.html" >Home</a></li>
+                        <li><a href="../../index.html">Home</a></li>
                         <li><a href="../html/topdestination.html">Top Destination</a></li>
                         <li><a href="../html/touristtour.html">Tourist Tour</a></li>
                         <li><a href="../html/contact.html" class="active">Contact</a></li>
                     </ul>
 
                     <div class="nav-actions">
-                        <img src="../img/bandera.png" alt="ES" class="flag" />
+                        <img src="../img/bandera.png" class="flag" />
                         <div class="phone-circle">
-                            <img src="../img/telefono.svg" alt="Teléfono" />
+                            <img src="../img/telefono.svg" />
                         </div>
                     </div>
                 </div>
@@ -64,35 +64,35 @@
 
                 <div class="contact-details">
                     <div class="detail-row">
-                        <img src="../img/ubi.svg" alt="Location" class="contact-icon">
+                        <img src="../img/ubi.svg" class="contact-icon">
                         <span>Head Office: Av. José Larco 1232, Miraflores, Lima - Peru</span>
                     </div>
                     <div class="detail-row">
-                        <img src="../img/relojarenaa.svg" alt="Support" class="contact-icon">
+                        <img src="../img/relojarenaa.svg" class="contact-icon">
                         <span>24/7 Adventure Support: +51 987 654 321 </span>
                     </div>
                     <div class="detail-row">
-                        <img src="../img/email.svg" alt="Email" class="contact-icon">
+                        <img src="../img/email.svg" class="contact-icon">
                         <span>Email: hello@makiperu.com </span>
                     </div>
                     <div class="detail-row">
-                        <img src="../img/reloj.svg" alt="Hours" class="contact-icon">
+                        <img src="../img/reloj.svg" class="contact-icon">
                         <span>Working Hours: Monday to Friday: 9:00 AM - 6:00 PM | Saturday: 9:00 AM - 1:00 PM</span>
                     </div>
                 </div>
 
                 <div class="social-links-container">
                     <a href="#" class="social-item">
-                        <img src="../img/social1.svg" alt="Instagram">
+                        <img src="../img/social1.svg">
                     </a>
                     <a href="#" class="social-item">
-                        <img src="../img/social2.svg" alt="TikTok">
+                        <img src="../img/social2.svg">
                     </a>
                     <a href="#" class="social-item">
-                        <img src="../img/social3.svg" alt="Twitter">
+                        <img src="../img/social3.svg">
                     </a>
                     <a href="#" class="social-item">
-                        <img src="../img/social4.svg" alt="Facebook">
+                        <img src="../img/social4.svg">
                     </a>
                 </div>
             </div>
@@ -131,7 +131,7 @@
 
     <section class="faq-section">
         <div class="map-background">
-            <img src="../img/mapa1.svg" alt="Peru Map Background">
+            <img src="../img/mapa1.svg">
 
             <div class="map-pins">
                 <div class="pin pin-lima" data-label="Lima HQ"></div>
@@ -171,7 +171,7 @@
             </div>
 
             <div class="faq-image">
-                <img src="../img/machu6.webp" alt="Machu Picchu Adventure">
+                <img src="../img/machu6.webp">
             </div>
         </div>
     </section>
@@ -180,85 +180,94 @@
     <section class="journey-section">
         <div class="journey-container">
             <div class="journey-white-card">
-            <div class="journey-header">
-                <h2>Your journey to <span>Peru</span></h2>
-                <p>Simple step to boook your adventure</p>
-            </div>
+                <div class="journey-header">
+                    <h2>Your journey to <span>Peru</span></h2>
+                    <p>Simple step to boook your adventure</p>
+                </div>
 
-            <div class="journey-main-layout">
-                <div class="journey-grid">
-                    <div class="step-card red-bg">
-                        <img src="../img/travel1.svg" alt="Travel Essentials" class="step-icon">
-                        <h3>TRAVEL ESSENTIALS</h3>
-                        <p>Check if your country requires a visa for Peru. Most visitors need a valid passport to stay
-                            for up to 90 days.</p>
+                <div class="journey-main-layout">
+                    <div class="journey-grid">
+                        <div class="step-card red-bg">
+                            <img src="../img/travel1.svg" class="step-icon">
+                            <h3>TRAVEL ESSENTIALS</h3>
+                            <p>Check if your country requires a visa for Peru. Most visitors need a valid passport to
+                                stay
+                                for up to 90 days.</p>
+                        </div>
+
+                        <div class="step-card border-only">
+                            <img src="../img/travel2.svg" class="step-icon">
+                            <h3>FIND YOUR PLANE</h3>
+                            <p>Most international travelers land at Jorge Chávez Airport (LIM). Daily flights connect to
+                                Cusco and Arequipa.</p>
+                        </div>
+
+                        <div class="step-card border-only">
+                            <img src="../img/ubi.svg" class="step-icon">
+                            <h3>SELECT YOUR DESTINY</h3>
+                            <p>Whether it's the mystical Inca Trail or a luxury cruise in the Amazon, book at least 3
+                                months
+                                in advance.</p>
+                        </div>
+
+                        <div class="step-card red-bg">
+                            <img src="../img/travel3.svg" class="step-icon">
+                            <h3>GET READY</h3>
+                            <p>Peru has multiple climates. Pack layers: light clothes for the coast and warm trekking
+                                outfits for the Andes.</p>
+                        </div>
                     </div>
 
-                    <div class="step-card border-only">
-                        <img src="../img/travel2.svg" alt="Find your plane" class="step-icon">
-                        <h3>FIND YOUR PLANE</h3>
-                        <p>Most international travelers land at Jorge Chávez Airport (LIM). Daily flights connect to
-                            Cusco and Arequipa.</p>
-                    </div>
-
-                    <div class="step-card border-only">
-                        <img src="../img/ubi.svg" alt="Select your destiny" class="step-icon">
-                        <h3>SELECT YOUR DESTINY</h3>
-                        <p>Whether it's the mystical Inca Trail or a luxury cruise in the Amazon, book at least 3 months
-                            in advance.</p>
-                    </div>
-
-                    <div class="step-card red-bg">
-                        <img src="../img/travel3.svg" alt="Get Ready" class="step-icon">
-                        <h3>GET READY</h3>
-                        <p>Peru has multiple climates. Pack layers: light clothes for the coast and warm trekking
-                            outfits for the Andes.</p>
+                    <div class="map-lima-side">
+                        <div class="map-wrapper">
+                            <img src="../img/lima.svg">
+                        </div>
                     </div>
                 </div>
 
-                <div class="map-lima-side">
-                    <div class="map-wrapper">
-                        <img src="../img/lima.svg" alt="Map of Peru Lima">
+                <div class="experience-row">
+                    <div class="exp-item">
+                        <img src="../img/j1.svg">
+                        <div class="exp-text">
+                            <h4>Your Safety is our Priority</h4>
+                            <p>We ensure a worry-free experience by partnering only with certified local operators and
+                                high-end transport services. From secure online payments to 24/7 on-trip support, your
+                                peace
+                                of mind is locked in with us.</p>
+                        </div>
+                    </div>
+                    <div class="exp-item">
+                        <img src="../img/j2.svg">
+                        <div class="exp-text">
+                            <h4>The Scenic Rail Experience</h4>
+                            <p>Reach the heart of the Incas in style. We manage your bookings for the world-renowned
+                                rail routes to Machu Picchu, offering panoramic views of the Sacred Valley that you
+                                can’t get any other way.</p>
+                        </div>
+                    </div>
+                    <div class="exp-item">
+                        <img src="../img/j3.svg">
+                        <div class="exp-text">
+                            <h4>Your Safety is our Priority</h4>
+                            <p>Experience the changing landscapes of Peru through our premium bus partners. We connect
+                                major hubs like Lima, Paracas, and Nazca with comfortable, reliable, and scenic road
+                                journeys designed for the modern explorer.</p>
+                        </div>
+                    </div>
+                    <div class="exp-item">
+                        <img src="../img/j4.svg">
+                        <div class="exp-text">
+                            <h4>The Scenic Rail Experience</h4>
+                            <p>Don't let heavy gear slow you down. We offer specialized luggage management and secure
+                                storage solutions in Lima and Cusco, so you can head into the Amazon or the Andes with
+                                only what you need.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="experience-row">
-                <div class="exp-item">
-                    <img src="../img/j1.svg" alt="Safety">
-                    <div class="exp-text">
-                        <h4>Your Safety is our Priority</h4>
-                        <p>We ensure a worry-free experience by partnering only with certified local operators and
-                            high-end transport services. From secure online payments to 24/7 on-trip support, your peace
-                            of mind is locked in with us.</p>
-                    </div>
+                <div class="journey-footer">
+                    <button class="btn-start-adventure">Click and start your adventure</button>
                 </div>
-                <div class="exp-item">
-                    <img src="../img/j2.svg" alt="Rail">
-                    <div class="exp-text">
-                        <h4>The Scenic Rail Experience</h4>
-                        <p>Reach the heart of the Incas in style. We manage your bookings for the world-renowned rail routes to Machu Picchu, offering panoramic views of the Sacred Valley that you can’t get any other way.</p>
-                    </div>
-                </div>
-                <div class="exp-item">
-                    <img src="../img/j3.svg" alt="Safety">
-                    <div class="exp-text">
-                        <h4>Your Safety is our Priority</h4>
-                        <p>Experience the changing landscapes of Peru through our premium bus partners. We connect major hubs like Lima, Paracas, and Nazca with comfortable, reliable, and scenic road journeys designed for the modern explorer.</p>
-                    </div>
-                </div>
-                <div class="exp-item">
-                    <img src="../img/j4.svg" alt="Rail">
-                    <div class="exp-text">
-                        <h4>The Scenic Rail Experience</h4>
-                        <p>Don't let heavy gear slow you down. We offer specialized luggage management and secure storage solutions in Lima and Cusco, so you can head into the Amazon or the Andes with only what you need.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="journey-footer">
-                <button class="btn-start-adventure">Click and start your adventure</button>
-            </div>
             </div>
         </div>
     </section>
@@ -275,7 +284,7 @@
             <div class="brand-group">
 
                 <h2 class="footer-brand-title">PERU GOBERMENT</h2>
-                <img src="../img/banderaperu.webp" alt="Bandera Peru" class="peru-flag">
+                <img src="../img/banderaperu.webp" class="peru-flag">
             </div>
 
             <div class="social-links">
@@ -327,8 +336,8 @@
     </footer>
     <script src="../../script.js"></script>
     <button id="backToTop" class="back-to-top">
-    <span class="arrow"></span>
-</button>
+        <span class="arrow"></span>
+    </button>
 </body>
 
 </html>
