--- a/assets/html/topdestination.html
+++ b/assets/html/topdestination.html
@@ -18,7 +18,7 @@
          <nav>
             <div class="nav-container">
                 <a href="index.html" class="logo">
-                    <img src="../img/logo1.png" alt="Maki Peru" />
+                    <img src="../img/logo1.png"  />
                 </a>
 
                 <div class="hamburger" id="hamburger">
@@ -36,9 +36,9 @@
                     </ul>
 
                     <div class="nav-actions">
-                        <img src="../img/bandera.png" alt="ES" class="flag" />
+                        <img src="../img/bandera.png"  class="flag" />
                         <div class="phone-circle">
-                            <img src="../img/telefono.svg" alt="Teléfono" />
+                            <img src="../img/telefono.svg"  />
                         </div>
                     </div>
                 </div>
@@ -53,7 +53,7 @@
     <section class="machu-editorial">
         <div class="container">
             <div class="massive-number-bg">
-                <img src="../img/1.png" alt="1" class="number-img">
+                <img src="../img/1.png"  class="number-img">
                 <span class="top-text">TOP</span>
             </div>
 
@@ -61,7 +61,7 @@
                 <div class="left-side">
                     <h2 class="destination-title">Machu Picchu</h2>
                     <div class="hero-image">
-                        <img src="../img/machu.webp" alt="Machu Picchu Overview">
+                        <img src="../img/machu.webp" >
                     </div>
                     <div class="description">
                         <p>Perched at 2,430 meters above sea level in the heart of a tropical mountain forest, Machu
@@ -84,18 +84,18 @@
             </div>
 
             <div class="machu-grid">
-                <div class="grid-item"><img src="../img/machu2.webp" alt=""></div>
-                <div class="grid-item"><img src="../img/machu4.webp" alt=""></div>
-                <div class="grid-item vertical"><img src="../img/machu5.webp" alt=""></div>
-                <div class="grid-item"><img src="../img/machu7.webp" alt=""></div>
-                <div class="grid-item"><img src="../img/machu6.webp" alt=""></div>
+                <div class="grid-item"><img src="../img/machu2.webp" ></div>
+                <div class="grid-item"><img src="../img/machu4.webp" ></div>
+                <div class="grid-item vertical"><img src="../img/machu5.webp" ></div>
+                <div class="grid-item"><img src="../img/machu7.webp" ></div>
+                <div class="grid-item"><img src="../img/machu6.webp" ></div>
             </div>
         </div>
     </section>
     <section class="machu-editorial">
         <div class="container">
             <div class="massive-number-bg">
-                <img src="../img/2.png" alt="1" class="number-img-2">
+                <img src="../img/2.png"  class="number-img-2">
                 <span class="top-text-2">TOP</span>
             </div>
 
@@ -103,7 +103,7 @@
                 <div class="left-side">
                     <h2 class="destination-title">Lima</h2>
                     <div class="hero-image">
-                        <img src="../img/peru1.webp" alt="Machu Picchu Overview">
+                        <img src="../img/peru1.webp" >
                     </div>
                     <div class="description">
                         <p>Perched at 2,430 meters above sea level in the heart of a tropical mountain forest, Machu
@@ -126,19 +126,19 @@
             </div>
 
             <div class="machu-grid">
-                <div class="grid-item"><img src="../img/playa.webp" alt=""></div>
-                <div class="grid-item"><img src="../img/4de0d3b4-c040-4a02-88e9-95eaf3c6a2e0_2_11zon.webp" alt="">
+                <div class="grid-item"><img src="../img/playa.webp" ></div>
+                <div class="grid-item"><img src="../img/4de0d3b4-c040-4a02-88e9-95eaf3c6a2e0_2_11zon.webp" >
                 </div>
-                <div class="grid-item vertical"><img src="../img/peru2.webp" alt=""></div>
-                <div class="grid-item"><img src="../img/peruano2.webp" alt=""></div>
-                <div class="grid-item"><img src="../img/peru6.webp" alt=""></div>
+                <div class="grid-item vertical"><img src="../img/peru2.webp" ></div>
+                <div class="grid-item"><img src="../img/peruano2.webp" ></div>
+                <div class="grid-item"><img src="../img/peru6.webp" ></div>
             </div>
         </div>
     </section>
     <section class="machu-editorial">
         <div class="container">
             <div class="massive-number-bg">
-                <img src="../img/3.svg" alt="1" class="number-img-3">
+                <img src="../img/3.svg"  class="number-img-3">
                 <span class="top-text-3">TOP</span>
             </div>
 
@@ -153,10 +153,10 @@
                             identity that is bold, colorful, and incredibly diverse.</p>
                     </div>
                     <div class="hero-image-3">
-                        <img src="../img/comida9.webp" alt="Machu Picchu Overview">
-                        <img src="../img/comida8.webp" alt="Machu Picchu Overview">
-                        <img src="../img/comida10.webp" alt="Machu Picchu Overview">
-                        <img src="../img/comida11.webp" alt="Machu Picchu Overview">
+                        <img src="../img/comida9.webp" >
+                        <img src="../img/comida8.webp" >
+                        <img src="../img/comida10.webp" >
+                        <img src="../img/comida11.webp" >
                     </div>
                 </div>
 
@@ -166,7 +166,7 @@
             <div class="dishes-grid">
                 <div class="dish-card">
                     <div class="dish-img">
-                        <img src="../img/comida3.webp" alt="Ceviche">
+                        <img src="../img/comida3.webp" >
                     </div>
                     <div class="dish-info">
                         <h4>Ceviche: The National Soul</h4>
@@ -178,7 +178,7 @@
 
                 <div class="dish-card">
                     <div class="dish-img">
-                        <img src="../img/comida5.webp" alt="Lomo Saltado">
+                        <img src="../img/comida5.webp" >
                     </div>
                     <div class="dish-info">
                         <h4>Lomo Saltado: The Stir-Fry Heritage</h4>
@@ -189,7 +189,7 @@
 
                 <div class="dish-card">
                     <div class="dish-img">
-                        <img src="../img/comida1.webp" alt="Ají de Gallina">
+                        <img src="../img/comida1.webp" >
                     </div>
                     <div class="dish-info">
                         <h4>Ají de Gallina: The Golden Cream</h4>
@@ -201,7 +201,7 @@
 
                 <div class="dish-card">
                     <div class="dish-img">
-                        <img src="../img/comida4.webp" alt="Cuy Chactado">
+                        <img src="../img/comida4.webp" >
                     </div>
                     <div class="dish-info">
                         <h4>Cuy Chactado</h4>
@@ -215,7 +215,7 @@
                 <div class="container">
                     <div class="feature-layout">
                         <div class="feature-img">
-                            <img src="../img/cuys.webp" alt="Traditional Andean Cuys">
+                            <img src="../img/cuys.webp" >
                         </div>
 
                         <div class="feature-text">
@@ -242,7 +242,7 @@
     <section class="machu-editorial">
         <div class="container">
             <div class="massive-number-bg">
-                <img src="../img/4-Photoroom.png" alt="1" class="number-img-4">
+                <img src="../img/4-Photoroom.png"  class="number-img-4">
                 <span class="top-text-4">TOP</span>
             </div>
 
@@ -252,7 +252,7 @@
                     <h2 class="destination-title">Lima</h2>
 
                     <div class="hero-image-amazonas">
-                        <img src="../img/amazonas7.webp" alt="Machu Picchu Overview">
+                        <img src="../img/amazonas7.webp" >
                     </div>
                     <div class="description">
                         <p>The Peruvian Amazon covers more than 60% of the country, making Peru the nation with the
@@ -279,12 +279,12 @@
             </div>
 
             <div class="machu-grid">
-                <div class="grid-item"><img src="../img/amazonas1.webp" alt=""></div>
-                <div class="grid-item"><img src="../img/amazonas3.webp" alt="">
+                <div class="grid-item"><img src="../img/amazonas1.webp" ></div>
+                <div class="grid-item"><img src="../img/amazonas3.webp" >
                 </div>
-                <div class="grid-item vertical"><img src="../img/amazonas4.webp" alt=""></div>
-                <div class="grid-item"><img src="../img/amazonas5.webp" alt=""></div>
-                <div class="grid-item"><img src="../img/amazonas6.webp" alt=""></div>
+                <div class="grid-item vertical"><img src="../img/amazonas4.webp" ></div>
+                <div class="grid-item"><img src="../img/amazonas5.webp" ></div>
+                <div class="grid-item"><img src="../img/amazonas6.webp" ></div>
             </div>
         </div>
     </section>
@@ -294,7 +294,7 @@
         <div class="brand-group">
             
             <h2 class="footer-brand-title">PERU GOBERMENT</h2>
-            <img src="../img/banderaperu.webp" alt="Bandera Peru" class="peru-flag">
+            <img src="../img/banderaperu.webp"  class="peru-flag">
         </div>
         
         <div class="social-links">
