--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <div class="nav-container">
                 <a href="index.html" class="logo">
-                    <img src="assets/img/logo1.png" alt="Maki Peru" />
+                    <img src="assets/img/logo1.png"  />
                 </a>
 
                 <div class="hamburger" id="hamburger">
@@ -38,9 +38,9 @@
                     </ul>
 
                     <div class="nav-actions">
-                        <img src="assets/img/bandera.png" alt="ES" class="flag" />
+                        <img src="assets/img/bandera.png"  class="flag" />
                         <div class="phone-circle">
-                            <img src="assets/img/telefono.svg" alt="Teléfono" />
+                            <img src="assets/img/telefono.svg"  />
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="image-box">
-                    <img src="assets/img/peruano1.webp" alt="Peruvian Culture" />
+                    <img src="assets/img/peruano1.webp"  />
                 </div>
             </div>
         </div>
@@ -84,7 +84,7 @@
     <section class="amazing-lands">
         <div class="container mosaic-layout">
             <div class="main-portrait">
-                <img src="assets/img/peru7.webp" alt="Cusco Cathedral and Plaza">
+                <img src="assets/img/peru7.webp" >
             </div>
 
             <div class="content-side">
@@ -101,7 +101,7 @@
                 </div>
 
                 <div class="secondary-landscape">
-                    <img src="assets/img/playa.webp" alt="Coastal view of Lima">
+                    <img src="assets/img/playa.webp" >
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
 
             <div class="main-card">
                 <div class="image-main">
-                    <img src="assets/img/incas.webp" alt="Inca Legacy">
+                    <img src="assets/img/incas.webp" >
                 </div>
                 <div class="text-box-red">
                     <p>The Inca Empire, known as Tawantinsuyu, was the largest civilization in pre-Columbian America.
@@ -126,14 +126,14 @@
 
             <div class="inca-gallery">
                 <div class="gallery-item large">
-                    <img src="assets/img/incas1.webp" alt="Inca Ceremony">
+                    <img src="assets/img/incas1.webp" >
                 </div>
                 <div class="gallery-side">
                     <div class="gallery-item">
-                        <img src="assets/img/incas2.webp" alt="Inca Walls">
+                        <img src="assets/img/incas2.webp" >
                     </div>
                     <div class="gallery-item">
-                        <img src="assets/img/incas3.webp" alt="Traditional Masks">
+                        <img src="assets/img/incas3.webp" >
                     </div>
                 </div>
             </div>
@@ -142,7 +142,7 @@
     <section class="history-full-section">
     <div class="container">
         <div class="history-image-wrapper">
-            <img src="assets/img/incas4.webp" alt="Inca Legacy" class="full-img">
+            <img src="assets/img/incas4.webp"  class="full-img">
             <div class="img-overlay"></div>
             
             <div class="history-content-box">
@@ -166,7 +166,7 @@
                 <div class="land-card">
                     <div class="image-wrapper">
                         <span class="badge">CULINARY</span>
-                        <img src="assets/img/comida5.webp" alt="Gastronomy Peru">
+                        <img src="assets/img/comida5.webp" >
                     </div>
                     <div class="card-content">
                         <h3>Gastronomy</h3>
@@ -179,7 +179,7 @@
                 <div class="land-card">
                     <div class="image-wrapper">
                         <span class="badge">HISTORY</span>
-                        <img src="assets/img/machu5.webp" alt="Tourism Machu Picchu">
+                        <img src="assets/img/machu5.webp" >
                     </div>
                     <div class="card-content">
                         <h3>Tourism</h3>
@@ -192,7 +192,7 @@
                 <div class="land-card">
                     <div class="image-wrapper">
                         <span class="badge">ADVENTURE</span>
-                        <img src="assets/img/paisaje5.webp" alt="Landscape Maras">
+                        <img src="assets/img/paisaje5.webp" >
                     </div>
                     <div class="card-content">
                         <h3>Landscape</h3>
@@ -206,8 +206,8 @@
     </section>
     <section class="full-width-hero">
         <div class="hero-image-container">
-            <div class="hero-bg-blur">
-                <img src="assets/img/peru5.webp" alt="Arequipa">
+            <div class="hero-background-blur">
+                <img src="assets/img/peru5.webp" >
             </div>
 
             <div class="hero-overlay-black"></div>
@@ -238,11 +238,11 @@
                 </div>
 
                 <div class="secondary-landscape">
-                    <img src="assets/img/paisaje12.webp" alt="Coastal view of Lima">
+                    <img src="assets/img/paisaje12.webp" >
                 </div>
             </div>
             <div class="main-portrait">
-                <img src="assets/img/paisaje20.webp" alt="Cusco Cathedral and Plaza">
+                <img src="assets/img/paisaje20.webp" >
             </div>
 
             
@@ -255,35 +255,35 @@
                 <div class="experts-flex">
                     <div class="expert-card">
                         <div class="img-circle">
-                            <img src="assets/img/guia.webp" alt="Guía 1">
+                            <img src="assets/img/guia.webp" >
                         </div>
                         <h3>Mateo Rivas</h3>
                         <div class="stars">★★★★★</div>
                     </div>
                     <div class="expert-card">
                         <div class="img-circle">
-                            <img src="assets/img/guia.webp" alt="Guía 2">
+                            <img src="assets/img/guia.webp" >
                         </div>
                         <h3>Elena Paz</h3>
                         <div class="stars">★★★★★</div>
                     </div>
                     <div class="expert-card">
                         <div class="img-circle">
-                            <img src="assets/img/guia.webp" alt="Guía 3">
+                            <img src="assets/img/guia.webp" >
                         </div>
                         <h3>Diego Luz</h3>
                         <div class="stars">★★★★★</div>
                     </div>
                     <div class="expert-card">
                         <div class="img-circle">
-                            <img src="assets/img/guia.webp" alt="Guía 4">
+                            <img src="assets/img/guia.webp" >
                         </div>
                         <h3>Sonia Mar</h3>
                         <div class="stars">★★★★★</div>
                     </div>
                     <div class="expert-card">
                         <div class="img-circle">
-                            <img src="assets/img/guia.webp" alt="Guía 5">
+                            <img src="assets/img/guia.webp" >
                         </div>
                         <h3>Lucas Sol</h3>
                         <div class="stars">★★★★★</div>
@@ -341,7 +341,7 @@
         <div class="brand-group">
 
             <h2 class="footer-brand-title">PERU GOBERMENT</h2>
-            <img src="assets/img/banderaperu.webp" alt="Bandera Peru" class="peru-flag">
+            <img src="assets/img/banderaperu.webp"  class="peru-flag">
         </div>
 
         <div class="social-links">
